fixed modal window element overflow

--- a/css/style.css
+++ b/css/style.css
@@ -205,7 +205,7 @@ body {
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 
   width: 650px;
-  height: 380px;
+  height: 400px;
   border-radius: 10px;
 
   display: flex;
